py-clang: drop py37 subport, simplify test phase

--- a/python/py-clang/Portfile
+++ b/python/py-clang/Portfile
@@ -9,12 +9,12 @@ version                 10
 # Needed for change to meta-versioning
 epoch                   1
 name                    py-clang
-python.versions         37 38 39 310 311
+python.versions         38 39 310 311
 license                 NCSA
 maintainers             {eborisch @eborisch} \
                         openmaintainer
 description             Python bindings for clang
-long_description        ${description}
+long_description        {*}${description}
 homepage \
     https://github.com/llvm/llvm-project/tree/main/clang/bindings/python
 
@@ -85,8 +85,7 @@ if {${name} ne ${subport}} {
     }
 
     test.run            yes
-    test.cmd            ${python.bin}
-    test.target         -m unittest discover -v
+    python.test_framework unittest
 
     if {![variant_isset clang37] &&
         ![variant_isset clang17] &&
