--- a/python/py-confection/Portfile
+++ b/python/py-confection/Portfile
@@ -25,12 +25,9 @@ description         The sweetest config system for Python
 long_description    {*}${description}
 
 # Supported python versions
-python.versions     37 38 39 310 311 312
+python.versions     38 39 310 311 312
 
 if {${name} ne ${subport}} {
-    depends_build-append \
-        port:py${python.version}-setuptools
-
     depends_lib-append \
         port:py${python.version}-pydantic \
         port:py${python.version}-typing_extensions \
