py-preshed: drop py37 subport

--- a/python/py-preshed/Portfile
+++ b/python/py-preshed/Portfile
@@ -26,13 +26,9 @@ long_description    {*}${description}
 github.livecheck.regex {([0-9.]+)}
 
 # Support python versions
-python.versions     37 38 39 310 311 312
+python.versions     38 39 310 311 312
 
 if {${name} ne ${subport}} {
-
-    depends_build-append \
-        port:py${python.version}-setuptools
-
     depends_lib-append \
         port:py${python.version}-cython \
         port:py${python.version}-cymem \
