--- a/python/py-cytoolz/Portfile
+++ b/python/py-cytoolz/Portfile
@@ -9,12 +9,12 @@ revision            0
 categories-append   devel
 license             BSD
 
-python.versions     37 38 39 310 311 312
+python.versions     38 39 310 311 312
 
 maintainers         {stromnov @stromnov} openmaintainer
 
 description         Cython implementation of Toolz.
-long_description    ${description}
+long_description    {*}${description}
 
 homepage            https://github.com/pytoolz/cytoolz/
 
