py-upt-{cpan,pypi,rubygems}: add py312 subport
- add myself as co-maintainer

--- a/python/py-upt-macports/Portfile
+++ b/python/py-upt-macports/Portfile
@@ -12,7 +12,7 @@ revision            0
 supported_archs     noarch
 platforms           {darwin any}
 license             BSD
-maintainers         {@korusuke somaiya.edu:karan.sheth} openmaintainer
+maintainers         {@korusuke somaiya.edu:karan.sheth} {reneeotten @reneeotten} openmaintainer
 
 description         MacPorts backend for upt
 long_description    {*}${description}
