--- a/python/py-preshed/Portfile
+++ b/python/py-preshed/Portfile
@@ -28,12 +28,11 @@ github.livecheck.regex {([0-9.]+)}
 # Support python versions
 python.versions     38 39 310 311 312
 
+compiler.cxx_standard 2014
+
 if {${name} ne ${subport}} {
     depends_lib-append \
         port:py${python.version}-cython \
         port:py${python.version}-cymem \
         port:py${python.version}-murmurhash
-
-    depends_test-append \
-        port:py${python.version}-pytest
 }
