py-behave: fix build failure

--- a/python/py-behave/Portfile
+++ b/python/py-behave/Portfile
@@ -33,6 +33,11 @@ python.versions      38 39
 github.livecheck.regex  {([0-9.]+)}
 
 if {${name} ne ${subport}} {
+    patchfiles-append   no_2to3.diff
+    post-patch {
+        system -W ${worksrcpath} "${prefix}/bin/2to3-${python.branch} --write --nobackups behave"
+        }
+
     depends_lib-append \
                     port:py${python.version}-setuptools
 
