--- a/R/R-atime/Portfile
+++ b/R/R-atime/Portfile
@@ -3,16 +3,17 @@
 PortSystem          1.0
 PortGroup           R 1.0
 
-R.setup             cran tdhock atime 2024.1.24
+R.setup             cran tdhock atime 2024.1.31
 revision            0
 categories-append   devel
 maintainers         nomaintainer
 license             GPL-3
 description         Asymptotic timing
 long_description    {*}${description}
-checksums           rmd160  9d19023cf6c765af55d6e59a222be7d3b8be0b71 \
-                    sha256  062c94780a7e75bfa5a269e664eb832fffc4e750fd0354ea3a241fd6f8e171d9 \
-                    size    2267565
+homepage            https://github.com/tdhock/atime
+checksums           rmd160  58d0de632c4d96d8792da25f2abb5c607ec13f23 \
+                    sha256  9ac81afba60198030c69ddaa33f77e260c4547d8b83fce7aa917b60afb6ef839 \
+                    size    694187
 supported_archs     noarch
 
 depends_lib-append  port:R-bench \
