py-distributed: drop py37 subport

--- a/python/py-distributed/Portfile
+++ b/python/py-distributed/Portfile
@@ -6,10 +6,13 @@ PortGroup           python 1.0
 name                py-distributed
 version             2023.6.1
 revision            0
+
+platforms       {darwin any}
+supported_archs noarch
 categories-append   devel
 license             BSD
 
-python.versions     37 38 39 310 311
+python.versions     38 39 310 311
 
 maintainers         {stromnov @stromnov} openmaintainer
 
@@ -26,10 +29,14 @@ checksums           rmd160  36f3990dcbd22d16ca33959c9df2722c7be61fcf \
                     size    1067722
 
 if {${name} ne ${subport}} {
+    depends_build-append \
+                        port:py${python.version}-versioneer
+
     depends_lib-append  port:py${python.version}-click \
                         port:py${python.version}-cloudpickle \
                         port:py${python.version}-dask \
                         port:py${python.version}-jinja2 \
+                        port:py${python.version}-locket \
                         port:py${python.version}-msgpack \
                         port:py${python.version}-packaging \
                         port:py${python.version}-psutil \
@@ -37,29 +44,9 @@ if {${name} ne ${subport}} {
                         port:py${python.version}-tblib \
                         port:py${python.version}-toolz \
                         port:py${python.version}-tornado \
-                        port:py${python.version}-zict \
-                        port:py${python.version}-yaml
+                        port:py${python.version}-urllib3 \
+                        port:py${python.version}-yaml \
+                        port:py${python.version}-zict
 
-    if {${python.version} >= 38} {
-        platforms       {darwin any}
-        supported_archs noarch
-        depends_build-append    port:py${python.version}-versioneer
-        depends_lib-append  port:py${python.version}-locket \
-                            port:py${python.version}-urllib3
-        patchfiles-append   pyproject.toml.patch
-    }
-
-    if {${python.version} eq 37} {
-        epoch               1
-        version             2022.2.0
-        revision            0
-        checksums           rmd160  c3994d51dd5b00039299a3ca1dbf33abcc092df0 \
-                            sha256  1a2f6eec9733a67004839dc4ecde6d5c17c079665a2c1573454dd2a5b5376d95 \
-                            size    911579
-        depends_build-append    port:py${python.version}-cython
-        depends_lib-append  port:py${python.version}-setuptools
-        build.args-append   -C--with-cython
-    }
-
-    livecheck.type      none
+    patchfiles-append   pyproject.toml.patch
 }
