socket_vmnet: Add minimum darwin version requirement

--- a/net/socket_vmnet/Portfile
+++ b/net/socket_vmnet/Portfile
@@ -10,6 +10,8 @@ maintainers         {sub-pop.net:link @subpop} \
                     openmaintainer
 license             APL-2.0
 
+platforms           {darwin >= 19}
+
 description         vmnet.framework support for rootless QEMU
 long_description    Daemon to provide access to vmnet.framework for rootless QEMU
 homepage            https://github.com/lima-vm/socket_vmnet
