R-parameters: update to 0.21.4

--- a/R/R-parameters/Portfile
+++ b/R/R-parameters/Portfile
@@ -3,7 +3,8 @@
 PortSystem          1.0
 PortGroup           R 1.0
 
-R.setup             github easystats parameters 0.21.3 v
+# Revert to GitHub once updated there.
+R.setup             cran easystats parameters 0.21.4 v
 revision            0
 categories-append   math
 maintainers         {@barracuda156 gmail.com:vital.had} openmaintainer
@@ -11,9 +12,9 @@ license             GPL-3
 description         Processing of model parameters
 long_description    {*}${description}
 homepage            https://easystats.github.io/parameters
-checksums           rmd160  2186f41bc3cb1845e5913691859cd44f9772db0b \
-                    sha256  403f20b2a8460bbe14ac35a9133b47414143bdeaaf7c588ca55d0c79204392bc \
-                    size    1011655
+checksums           rmd160  a717bc2d6662461b64687e107b9a81c2c3756efc \
+                    sha256  c2a566135b1b0b62697fd5866981d9ba63edba1e181d19492177dbb61d90bd14 \
+                    size    674130
 supported_archs     noarch
 
 depends_lib-append  port:R-bayestestR \
