--- a/R/R-reclin2/Portfile
+++ b/R/R-reclin2/Portfile
@@ -4,15 +4,16 @@ PortSystem          1.0
 PortGroup           R 1.0
 
 # GitHub version lags behind.
-R.setup             cran djvanderlaan reclin2 0.3.4
+R.setup             cran djvanderlaan reclin2 0.4.0
 revision            0
 maintainers         {@barracuda156 gmail.com:vital.had} openmaintainer
 license             GPL-3
 description         Record linkage toolkit
 long_description    {*}${description}
-checksums           rmd160  259c8692d252f840600ca94e8c4c61431a6d5a70 \
-                    sha256  febf19f380c3df16adafa589258034d89f2651625be93b7f47ec42613f7dbcaa \
-                    size    122127
+homepage            https://github.com/djvanderlaan/reclin2
+checksums           rmd160  42559b2149ef673d351aec9b6863dbc6a5033394 \
+                    sha256  783ed2cabab0ae2ede905372a734ed03da23f434a921e842dccfd51dd724b76d \
+                    size    138139
 
 depends_lib-append  port:R-data.table \
                     port:R-lpSolve \
