iwnet: update to 2024.01.27

--- a/net/iwnet/Portfile
+++ b/net/iwnet/Portfile
@@ -8,20 +8,29 @@ PortGroup           legacysupport 1.1
 # strndup, clock_gettime
 legacysupport.newest_darwin_requires_legacy 15
 
-github.setup        Softmotions iwnet 45e534d9104bb09617aaad37d5944fd79b45c689
-version             2023.10.26
+github.setup        Softmotions iwnet 81b6ad3d69ff3654bdad04478666edbf4d3f5d3f
+version             2024.01.27
 revision            0
 categories          net devel
 license             MIT
 maintainers         {@barracuda156 gmail.com:vital.had} openmaintainer
-description         Pure C asynchronous HTTP framework providing websockets client/server, SSL, reverse proxy and routing
-long_description    {*}${description}
+description         Pure C asynchronous HTTP framework
+long_description    {*}${description} providing websockets client/server, SSL, \
+                    reverse proxy and routing.
 # Due to: https://github.com/Softmotions/iwnet/issues/5
 platforms           {darwin > 9}
-checksums           rmd160  89f55b0f4f7e75d790c15ee000c0ae5147146333 \
-                    sha256  f1f514a4f6157fdd86b6aa55f2a46e78031bccda33293cf22c66aefae3d87eb9 \
-                    size    823431
+checksums           rmd160  c4c0ce4688fad27a03135c597eb42f5a9d7068d7 \
+                    sha256  418bf8c2de707559fd21ddb6474c989377de9793eed3bb993bd66b429ad0c94d \
+                    size    824035
 github.tarball_from archive
+
+# Temporary fix reverting a breaking commit:
+# https://github.com/Softmotions/iwnet/commit/414ce1adc6484c6518ac8587107ff2905328f8de
+# FIXME: add an implementation for pthread_barrier. See also:
+# https://github.com/ademakov/DarwinPthreadBarrier
+# https://github.com/envy/knx2influx/issues/20
+# https://github.com/pmwkaa/ioarena/issues/10
+patchfiles-append   0001-Revert-iwn_poller_poll_in_thread-now-waits-poller-th.patch
 
 depends_lib-append  port:iowow
 
