py-pandas: fix compiler choice to fix < 10.7
Fixes: https://trac.macports.org/ticket/69100

--- a/python/py-pandas/Portfile
+++ b/python/py-pandas/Portfile
@@ -27,7 +27,7 @@ checksums           rmd160  c803d9d4543d188d2c63976118e447e2a3c2609e \
 
 # error: use of undeclared identifier 'signbit'; did you mean 'std::signbit'?
 compiler.blacklist-append \
-                    {clang < 600}
+                    {clang < 600} *gcc-4.*
 
 if {${name} ne ${subport}} {
     depends_build-append \
