--- a/www/libmicrohttpd/Portfile
+++ b/www/libmicrohttpd/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 
 name                libmicrohttpd
-version             0.9.77
+version             1.0.0
 categories          www
 license             LGPL
 maintainers         {snc @nerdling} openmaintainer
@@ -15,12 +15,15 @@ long_description    \
                     free software and part of the GNU project.
 homepage            https://www.gnu.org/software/libmicrohttpd/
 master_sites        gnu
-platforms           darwin
-depends_lib         path:lib/pkgconfig/gnutls.pc:gnutls port:libgcrypt port:libgpg-error
+depends_lib         path:lib/pkgconfig/gnutls.pc:gnutls \
+                    port:libgcrypt \
+                    port:libgpg-error
 
-checksums           rmd160  1eb28fa3e35eab9112e7b5b2f814c299a5290360 \
-                    sha256  9e7023a151120060d2806a6ea4c13ca9933ece4eacfc5c9464d20edddb76b0a0 \
-                    size    1896679
+checksums           rmd160  80855a0cf18af2fb60b60b686122f4aa7b2c409a \
+                    sha256  a02792d3cd1520e2ecfed9df642079d44a36ed87167442b28d7ed19e906e3e96 \
+                    size    2238702
+
+patchfiles          patch-fix-gnutls-include.diff
 
 configure.args-append   --disable-spdy
 
