postgresql14: misc bug fixes

--- a/databases/postgresql14/Portfile
+++ b/databases/postgresql14/Portfile
@@ -9,7 +9,7 @@ PortGroup muniversal 1.0
 #remember to update the -doc and -server as well
 name                postgresql14
 version             14.11
-revision            0
+revision            1
 
 categories          databases
 platforms           darwin
@@ -51,9 +51,14 @@ depends_run         port:postgresql_select
 
 worksrcdir          postgresql-${version}
 
+if {${universal_possible} && [variant_isset universal]} {
+    set zicpath     ${worksrcpath}-${build_arch}/src/timezone/zic
+} else {
+    set zicpath     ${worksrcpath}/src/timezone/zic
+}
 set libdir          ${prefix}/lib/${name}
 configure.args      PG_SYSROOT=disabled \
-                    ZIC=${worksrcpath}/src/timezone/zic \
+                    ZIC=${zicpath} \
                     --sysconfdir=${prefix}/etc/${name} \
                     --bindir=${libdir}/bin \
                     --libdir=${libdir} \
@@ -103,6 +108,8 @@ livecheck.url       ${homepage}/ftp/source/
 
 post-destroot {
     ln -s ${libdir}/bin/psql ${destroot}${prefix}/bin/psql14
+    # delete buggy symlink - this can be removed 2025/02
+    file delete -force ${portdbpath}/psql14
 
     reinplace -E "s#^CFLAGS =#CFLAGS +=#g" \
         ${destroot}${prefix}/lib/${name}/pgxs/src/Makefile.global
