py-llvmlite: fix livecheck

--- a/python/py-llvmlite/Portfile
+++ b/python/py-llvmlite/Portfile
@@ -68,4 +68,6 @@ if {${name} ne ${subport}} {
 
     build.env-append    LLVM_CONFIG=llvm-config-mp-${llvmver}
     destroot.env-append LLVM_CONFIG=llvm-config-mp-${llvmver}
+
+    livecheck.type      none
 }
