--- a/python/py-numba/Portfile
+++ b/python/py-numba/Portfile
@@ -48,4 +48,6 @@ if {${name} ne ${subport}} {
 
         depends_lib-append  port:py${python.version}-importlib-metadata
     }
+
+    livecheck.type      none
 }
