newsraft: fix prefix

--- a/net/newsraft/Portfile
+++ b/net/newsraft/Portfile
@@ -26,3 +26,5 @@ depends_lib-append  port:curl \
                     port:ncurses \
                     port:sqlite3 \
                     port:yajl
+
+destroot.args       PREFIX=${prefix}
