p5-dbd-mysql: upgrade version, remove EOL variants, add mysql82
  - Upgrade to version 5.003
  - Remove end of life mariaDB variants
  - Remove unsupported mysql variants
  - Update defaults to mysql8 for supported OSs, mariadB 10-6 (LTS)
    for older OSes
  - Add additional mysql82 variant

 Closes: https://trac.macports.org/ticket/62086

--- a/perl/p5-dbd-mysql/Portfile
+++ b/perl/p5-dbd-mysql/Portfile
@@ -4,7 +4,7 @@ PortSystem          1.0
 PortGroup           perl5 1.0
 
 perl5.branches      5.28 5.30 5.32 5.34
-perl5.setup         DBD-mysql 4.052 ../../authors/id/D/DV/DVEEDEN
+perl5.setup         DBD-mysql 5.003 ../../authors/id/D/DV/DVEEDEN
 revision            0
 license             {Artistic-1 GPL}
 maintainers         nomaintainer
@@ -13,9 +13,9 @@ long_description    {*}${description}
 
 platforms           darwin
 
-checksums           rmd160  2e614009d863d4a67bb225a3a0ac329209b1910e \
-                    sha256  a83f57af7817787de0ef56fb15fdfaf4f1c952c8f32ff907153b66d2da78ff5b \
-                    size    162074
+checksums           rmd160  750b4a31d358a7c5ae5a3f9905df80357dbc1f3b \
+                    sha256  21554443d60e294cc0ac00adaef53ccb7de55d4fae66a38372a5adf0a0f1edda \
+                    size    154242
 
 if {${perl5.major} != ""} {
     depends_build-append \
@@ -26,117 +26,72 @@ if {${perl5.major} != ""} {
     depends_lib-append \
                     port:p${perl5.major}-dbi
 
-    variant mysql56 conflicts mysql57 mysql8 mysql81 \
-                    mariadb10_1 mariadb10_2 mariadb10_3 mariadb10_4 mariadb10_5 mariadb10_6 \
-                    mariadb10_10 mariadb10_11 \
-                    percona description {build with mysql56 port} {
-        depends_lib-append      port:mysql56
-        configure.args-append   --mysql_config=${prefix}/lib/mysql56/bin/mysql_config
-    }
-
-    variant mysql57 conflicts mysql56 mysql8 mysql81 \
-                    mariadb10_1 mariadb10_2 mariadb10_3 mariadb10_4 mariadb10_5 mariadb10_6 \
-                    mariadb10_10 mariadb10_11 \
-                    mariadb10_11 percona description {build with mysql57 port} {
-        depends_lib-append      port:mysql57
-        configure.args-append   --mysql_config=${prefix}/lib/mysql57/bin/mysql_config
-    }
-
-    variant mysql8  conflicts mysql56 mysql57 mysql81 \
-                    mariadb10_1 mariadb10_2 mariadb10_3 mariadb10_4 mariadb10_5 mariadb10_6 \
-                    mariadb10_10 mariadb10_11 \
-                    mariadb10_11 percona description {build with mysql8 port} {
+    variant mysql8  conflicts mysql81 mysql82 \
+                    mariadb10_4 mariadb10_5 mariadb10_6 mariadb10_10 mariadb10_11 \
+                    percona description {build with mysql8 port} {
         depends_lib-append      port:mysql8
         configure.args-append   --mysql_config=${prefix}/lib/mysql8/bin/mysql_config
     }
 
-    variant mysql81  conflicts mysql56 mysql57 mysql8 \
-                    mariadb10_1 mariadb10_2 mariadb10_3 mariadb10_4 mariadb10_5 mariadb10_6 \
-                    mariadb10_10 mariadb10_11 \
-                    mariadb10_11 percona description {build with mysql8 1port} {
+    variant mysql81  conflicts mysql8 mysql82 \
+                    mariadb10_4 mariadb10_5 mariadb10_6 mariadb10_10 mariadb10_11 \
+                    percona description {build with mysql81 port} {
         depends_lib-append      port:mysql81
         configure.args-append   --mysql_config=${prefix}/lib/mysql81/bin/mysql_config
     }
 
-    variant mariadb10_1 conflicts mysql56 mysql57 mysql8 mysql81 \
-                    mariadb10_2 mariadb10_3 mariadb10_4 mariadb10_5 mariadb10_6 \
-                    mariadb10_10 mariadb10_11 \
-                    percona description {build with mariadb-10.1 port} {
-        depends_lib-append      port:mariadb-10.1
-        configure.args-append   --mysql_config=${prefix}/lib/mariadb-10.1/bin/mysql_config
+    variant mysql82  conflicts mysql8 mysql81 \
+                    mariadb10_4 mariadb10_5 mariadb10_6  mariadb10_10 mariadb10_11 \
+                    percona description {build with mysql82 port} {
+        depends_lib-append      port:mysql82
+        configure.args-append   --mysql_config=${prefix}/lib/mysql82/bin/mysql_config
     }
 
-    variant mariadb10_2 conflicts mysql56 mysql57 mysql8 mysql81 \
-                    mariadb10_1 mariadb10_3 mariadb10_4 mariadb10_5 mariadb10_6 \
-                    mariadb10_10 mariadb10_11 \
-                    percona description {build with mariadb-10.2 port} {
-        depends_lib-append      port:mariadb-10.2
-        configure.args-append   --mysql_config=${prefix}/lib/mariadb-10.2/bin/mysql_config
-    }
-
-    variant mariadb10_3 conflicts mysql56 mysql57 mysql8 mysql81\
-                    mariadb10_1 mariadb10_2 mariadb10_4 mariadb10_5 mariadb10_6 \
-                    mariadb10_10 mariadb10_11 \
-                    percona description {build with mariadb-10.3 port} {
-        depends_lib-append      port:mariadb-10.3
-        configure.args-append   --mysql_config=${prefix}/lib/mariadb-10.3/bin/mysql_config
-    }
-
-    variant mariadb10_4 conflicts mysql56 mysql57 mysql8 mysql81 \
-                    mariadb10_1 mariadb10_2 mariadb10_3 mariadb10_5 mariadb10_6 \
-                    mmariadb10_10 mariadb10_11 \
+    variant mariadb10_4 conflicts mysql8 mysql81 mysql82 \
+                    mariadb10_5 mariadb10_6 mariadb10_10 mariadb10_11 \
                     percona description {build with mariadb-10.4 port} {
         depends_lib-append      port:mariadb-10.4
         configure.args-append   --mysql_config=${prefix}/lib/mariadb-10.4/bin/mysql_config
     }
 
-    variant mariadb10_5 conflicts mysql56 mysql57 mysql8 mysql81 \
-                    mariadb10_1 mariadb10_2 mariadb10_3 mariadb10_4 mariadb10_6 \
-                    mariadb10_10 mariadb10_11 \
+    variant mariadb10_5 conflicts mysql8 mysql81 mysql82 \
+                    mariadb10_4 mariadb10_6 mariadb10_10 mariadb10_11 \
                     percona description {build with mariadb-10.5 port} {
         depends_lib-append      port:mariadb-10.5
         configure.args-append   --mysql_config=${prefix}/lib/mariadb-10.5/bin/mysql_config
     }
 
-    variant mariadb10_6 conflicts mysql56 mysql57 mysql8 mysql81 \
-                    mariadb10_1 mariadb10_2 mariadb10_3 mariadb10_4 mariadb10_5 \
-                    mariadb10_10 mariadb10_11 \
+    variant mariadb10_6 conflicts mysql8 mysql81 mysql82 \
+                    mariadb10_4 mariadb10_5 mariadb10_10 mariadb10_11 \
                     percona description {build with mariadb-10.5 port} {
         depends_lib-append      port:mariadb-10.5
         configure.args-append   --mysql_config=${prefix}/lib/mariadb-10.5/bin/mysql_config
     }
 
-    variant mariadb10_10 conflicts mysql56 mysql57 mysql8 mysql81 \
-                    mariadb10_1 mariadb10_2 mariadb10_3 mariadb10_4 mariadb10_5 mariadb10_6 \
-                    mariadb10_11 \
+    variant mariadb10_10 conflicts mysql8 mysql81 mysql82 \
+                    mariadb10_4 mariadb10_5 mariadb10_6 mariadb10_11 \
                     percona description {build with mariadb-10.5 port} {
         depends_lib-append      port:mariadb-10.5
         configure.args-append   --mysql_config=${prefix}/lib/mariadb-10.5/bin/mysql_config
     }
 
-    variant mariadb10_11 conflicts mysql56 mysql57 mysql8 mysql81 \
-                    mariadb10_1 mariadb10_2 mariadb10_3 mariadb10_4 mariadb10_5 mariadb10_6 \
-                    mariadb10_10 \
+    variant mariadb10_11 conflicts mysql8 mysql81 mysql82 \
+                    mariadb10_4 mariadb10_5 mariadb10_6 mariadb10_10 \
                     percona description {build with mariadb-10.5 port} {
         depends_lib-append      port:mariadb-10.5
         configure.args-append   --mysql_config=${prefix}/lib/mariadb-10.5/bin/mysql_config
     }
 
-    variant percona conflicts mysql56 mysql57 mysql8 mysql81 \
-                    mariadb10_1 mariadb10_2 mariadb10_3 mariadb10_4 mariadb10_5 mariadb10_6 \
-                    mariadb10_10 mariadb10_11 \
+    variant percona conflicts mysql8 mysql81 mysql82 \
+                    mariadb10_4 mariadb10_5 mariadb10_6 mariadb10_10 mariadb10_11 \
                     description {build with percona port} {
         depends_lib-append      port:percona
         configure.args-append   --mysql_config=${prefix}/lib/percona/bin/mysql_config
     }
 
-    if {   ![variant_isset mysql56]
-        && ![variant_isset mysql57]
-        && ![variant_isset mysql8]
+    if {   ![variant_isset mysql8]
         && ![variant_isset mysql81]
-        && ![variant_isset mariadb10_1]
-        && ![variant_isset mariadb10_2]
-        && ![variant_isset mariadb10_3]
+        && ![variant_isset mysql82]
         && ![variant_isset mariadb10_4]
         && ![variant_isset mariadb10_5]
         && ![variant_isset mariadb10_6]
@@ -145,9 +100,9 @@ if {${perl5.major} != ""} {
         && ![variant_isset percona]
     } {
         if {${os.major} > 12} {
-            default_variants +mysql57
+            default_variants +mysql8
         } else {
-            default_variants +mysql56
+            default_variants +mariadb10_6
         }
     }
 }
