qt5-mysql-plugin, qt6-mysql-plugin new variants
  qt5-mysql-plugin:
  - Add MYSQL82 variant
  qt6-mysql-plugin:
  - Add MYSQL82 variant
  - Fix mariadb10_7 typo

--- a/aqua/qt5/Portfile
+++ b/aqua/qt5/Portfile
@@ -957,6 +957,14 @@ array set sql_plugins {
             ""
         }
         {
+            "mysql82"
+            "port:mysql82"
+            "${prefix}/include/mysql82/mysql"
+            "${prefix}/lib/mysql82/mysql"
+            "-lmysqlclient"
+            ""
+        }
+        {
             "mysql81"
             "port:mysql81"
             "${prefix}/include/mysql81/mysql"
