--- a/aqua/qt6/Portfile
+++ b/aqua/qt6/Portfile
@@ -710,7 +710,7 @@ array set sql_plugins {
                     -DMySQL_LIBRARY=${prefix}/lib/mariadb-10.8/mysql/libmariadb.dylib
                 }
             }
-            mariadb10_9 {
+            mariadb10_7 {
                 "port:mariadb-10.7"
                 {
                     -DMySQL_INCLUDE_DIR=${prefix}/include/mariadb-10.7/mysql
@@ -750,6 +750,13 @@ array set sql_plugins {
                 {
                     -DMySQL_INCLUDE_DIR=${prefix}/include/mysql81/mysql
                     -DMySQL_LIBRARY=${prefix}/lib/mysql81/mysql/libmysqlclient.dylib
+                }
+            }
+            mysql82 {
+                "port:mysql82"
+                {
+                    -DMySQL_INCLUDE_DIR=${prefix}/include/mysql82/mysql
+                    -DMySQL_LIBRARY=${prefix}/lib/mysql82/mysql/libmysqlclient.dylib
                 }
             }
         }
