--- a/python/py-types-setuptools/Portfile
+++ b/python/py-types-setuptools/Portfile
@@ -4,7 +4,7 @@ PortSystem          1.0
 PortGroup           python 1.0
 
 name                py-types-setuptools
-version             68.2.0.2
+version             69.0.0.20240125
 revision            0
 categories-append   devel
 license             Apache-2
@@ -25,10 +25,18 @@ long_description    {*}${description}. Typeshed contains external type \
 
 homepage            https://github.com/python/typeshed
 
-checksums           rmd160  dba23b1c9eea0096f4debb24ee74e5c0cd4f44a3 \
-                    sha256  09efc380ad5c7f78e30bca1546f706469568cf26084cfab73ecf83dea1d28446 \
-                    size    33292
+checksums           rmd160  2eddc298c932f78a160d7ae5ed51101ca3496af7 \
+                    sha256  22ad498cb585b22ce8c97ada1fccdf294a2e0dd7dc984a28535a84ea82f45b3f \
+                    size    33291
 
 if {${name} ne ${subport}} {
     python.pep517   yes
+
+    if {${python.version} == 37} {
+        version     68.2.0.2
+        revision    0
+        checksums   rmd160  dba23b1c9eea0096f4debb24ee74e5c0cd4f44a3 \
+                    sha256  09efc380ad5c7f78e30bca1546f706469568cf26084cfab73ecf83dea1d28446 \
+                    size    33292
+    }
 }
