libsdl2: build fixes for older systems
Closes: https://trac.macports.org/ticket/69269

--- a/devel/libsdl2/Portfile
+++ b/devel/libsdl2/Portfile
@@ -24,6 +24,9 @@ distname        SDL2-${version}
 checksums       rmd160 eb2bab97460b4f9874e6853fb459db965d7ac1be \
                 sha256 36e2e41557e0fa4a1519315c0f5958a87ccb27e25c51776beb6f1239526447b0
 
+patchfiles      SDL_mfijoystick.diff \
+                vulkan_metal.h.diff
+
 configure.args  --without-x \
                 --disable-jack \
                 --disable-esd \
