octave-generate_html: set platforms any

--- a/octave/octave-generate_html/Portfile
+++ b/octave/octave-generate_html/Portfile
@@ -5,12 +5,12 @@ PortGroup           octave 1.0
 
 octave.setup        generate_html 0.3.3
 revision            0
-platforms           darwin
+platforms           any
 license             GPL-2+
 maintainers         {mps @Schamschula} openmaintainer
 description         This package provides functions for generating HTML pages \
                     that contain the help texts for a set of functions.
-long_description    ${description} The package is designed to be as general as possible, \
+long_description    {*}${description} The package is designed to be as general as possible, \
                     but also contains convenience functions for generating a set of \
                     pages for entire packages.
 
