octave-linear-algebra: set platforms any

--- a/octave/octave-linear-algebra/Portfile
+++ b/octave/octave-linear-algebra/Portfile
@@ -5,12 +5,12 @@ PortGroup           octave 1.0
 
 octave.setup        linear-algebra 2.2.3
 revision            1
-platforms           darwin
+platforms           any
 license             GPL-3+ LGPL-3+ FreeBSD
 maintainers         {mps @Schamschula} openmaintainer
 description         Additional linear algebra code, including \
                     general SVD and matrix functions.
-long_description    ${description}
+long_description    {*}${description}
 
 checksums           rmd160  a266fd0b7d16e705b7258ce8c51f7a35e16e842f \
                     sha256  53ee6a534e1327282339cbc0bd335af17e0f897f737c00bfa686c99d6ebf92f3 \
