octave-matgeom: set platforms any

--- a/octave/octave-matgeom/Portfile
+++ b/octave/octave-matgeom/Portfile
@@ -5,7 +5,7 @@ PortGroup           octave 1.0
 
 octave.setup        matgeom 1.2.3
 revision            0
-platforms           darwin
+platforms           any
 license             FreeBSD
 maintainers         {mps @Schamschula} openmaintainer
 description         Geometry toolbox for 2D/3D geometric computing
