octave-mvn: set platforms any

--- a/octave/octave-mvn/Portfile
+++ b/octave/octave-mvn/Portfile
@@ -5,11 +5,11 @@ PortGroup           octave 1.0
 
 octave.setup        mvn 1.1.0
 revision            5
-platforms           darwin
+platforms           any
 license             GPL-2+
 maintainers         {mps @Schamschula} openmaintainer
 description         Multivariate normal distribution clustering and utility functions.
-long_description    ${description}
+long_description    {*}${description}
 
 checksums           rmd160  f6690ca25d0efa692a1e89bb0d51776a7ff78a5b \
                     sha256  af5a16b91cb6b83ef05ba62321fc1b8a90c8fe7ee79a4fc819b5618b3b4c8603 \
