octave-queueing: set platforms any

--- a/octave/octave-queueing/Portfile
+++ b/octave/octave-queueing/Portfile
@@ -5,12 +5,12 @@ PortGroup           octave 1.0
 
 octave.setup        queueing 1.2.7
 revision            1
-platforms           darwin
+platforms           any
 license             GPL-2+
 maintainers         {mps @Schamschula} openmaintainer
 description         The queueing package provides functions for queueing networks and \
                     Markov chains analysis.
-long_description    ${description}This package can be used to compute steady-state \
+long_description    {*}${description}This package can be used to compute steady-state \
                     performance measures for open, closed and mixed networks with single \
                     or multiple job classes. Mean Value Analysis (MVA), convolution, and \
                     various bounding techniques are implemented. Furthermore, several \
