--- a/octave/octave-secs1d/Portfile
+++ b/octave/octave-secs1d/Portfile
@@ -5,12 +5,12 @@ PortGroup           octave 1.0
 
 octave.setup        secs1d 0.0.9
 revision            5
-platforms           darwin
+platforms           any
 license             GPL-2+
 maintainers         nomaintainer
 description         A Drift-Diffusion simulator for 1d \
                     semiconductor devices.
-long_description    ${description}
+long_description    {*}${description}
 
 checksums           rmd160  5890b3e82de3ee23f3be91e14795a11aa3d605f2 \
                     sha256  48a3ab03ff92478efe3c557144f5fb4b198ab6766f4e2a77a67683114c688aa8 \
