octave-tsa: set platforms any

--- a/octave/octave-tsa/Portfile
+++ b/octave/octave-tsa/Portfile
@@ -5,7 +5,7 @@ PortGroup           octave 1.0
 
 octave.setup        tsa 4.6.3
 revision            0
-platforms           darwin
+platforms           any
 license             GPL-3+
 maintainers         {mps @Schamschula} openmaintainer
 description         Stochastic concepts and maximum entropy \
