--- a/octave/octave-vrml/Portfile
+++ b/octave/octave-vrml/Portfile
@@ -5,11 +5,11 @@ PortGroup           octave 1.0
 
 octave.setup        vrml 1.0.13
 revision            5
-platforms           darwin
+platforms           any
 license             GPL-3+ GFDL
 maintainers         nomaintainer
 description         3D graphics using VRML.
-long_description    ${description}
+long_description    {*}${description}
 
 checksums           rmd160  c07aa8303d29ccdee00c92271088dd9bc3c11267 \
                     sha256  c45357d47382b22a37dded72888c34a3839ff608baedbfea11ed2950c21ca9d7 \
