--- a/perl/p5-mail-spf/Portfile
+++ b/perl/p5-mail-spf/Portfile
@@ -4,8 +4,8 @@ PortSystem          1.0
 PortGroup           perl5 1.0
 
 perl5.branches      5.28 5.30 5.32 5.34
-perl5.setup         Mail-SPF v2.9.0
-revision            2
+perl5.setup         Mail-SPF 3.20240205
+revision            0
 categories-append   mail
 license             BSD
 maintainers         nomaintainer
@@ -16,9 +16,9 @@ long_description    Mail-SPF provides an object oriented interface to \
 platforms           {darwin any}
 supported_archs     noarch
 
-checksums           rmd160  3ec3b3e910fd5fd2d424018c9d8e270131115caf \
-                    sha256  61cb5915f1c7acc7a931ffc1bfc1291bdfac555e2a46eb2391b995ea9ecb6162 \
-                    size    103834
+checksums           rmd160  bbe38f145d932e911a53def4b1343b941de89d89 \
+                    sha256  5f2fee25649bc97ecb7b7444d87110e50d0119f341d8b94ac3f9765fda120edf \
+                    size    79671
 
 if {${perl5.major} != ""} {
     depends_build-append \
@@ -26,18 +26,8 @@ if {${perl5.major} != ""} {
     
     depends_lib-append \
                     port:p${perl5.major}-error \
-                    port:p${perl5.major}-mime-base64\
+                    port:p${perl5.major}-io \
                     port:p${perl5.major}-net-dns \
-                    port:p${perl5.major}-net-ip \
                     port:p${perl5.major}-netaddr-ip \
-                    port:p${perl5.major}-uri \
-                    port:p${perl5.major}-version \
-    
-    perl5.use_module_build
-    
-    post-configure {
-        move ${worksrcpath}/sbin/spfd ${worksrcpath}/sbin/spfd-${perl5.major}
-    }
-    
-    destroot.args-append --install_path sbin=${prefix}/sbin
+                    port:p${perl5.major}-uri
 }
