--- a/python/py-jsonschema/Portfile
+++ b/python/py-jsonschema/Portfile
@@ -4,15 +4,14 @@ PortSystem          1.0
 PortGroup           python 1.0
 
 name                py-jsonschema
-version             4.20.0
+version             4.21.1
 revision            0
 categories-append   devel
 license             MIT
 supported_archs     noarch
 platforms           {darwin any}
 
-python.versions     35 36 37 38 39 310 311 312
-python.pep517       yes
+python.versions     38 39 310 311 312
 python.pep517_backend hatch
 
 maintainers         {stromnov @stromnov} openmaintainer
@@ -22,55 +21,22 @@ long_description    {*}${description}
 
 homepage            https://github.com/python-jsonschema/jsonschema
 
-checksums           rmd160  d3809a9d155cf5842885e9b5615911097edf39b6 \
-                    sha256  4f614fd46d8d61258610998997743ec5492a648b33cf478c1ddc23ed4598a5fa \
-                    size    320243
+checksums           rmd160  09d7c7f8504b54fbf4aac3a7c48726df90f377d3 \
+                    sha256  85727c00279f5fa6bedbe6238d2aa6403bedd8b4864ab11207d07df3cc1b2ee5 \
+                    size    321491
 
 if {${name} ne ${subport}} {
-    # CLI depends on pkg_resources.py from setuptools
+    depends_build-append \
+                        port:py${python.version}-hatch-vcs \
+                        port:py${python.version}-hatch-fancy-pypi-readme
     depends_lib-append  port:py${python.version}-attrs \
-                        port:py${python.version}-setuptools
+                        port:py${python.version}-jsonschema-specifications \
+                        port:py${python.version}-referencing \
+                        port:py${python.version}-rpds-py
 
-    if {${python.version} < 37} {
-        version             3.2.0
-        distname            ${python.rootname}-${version}
-        checksums           rmd160  fb79174fba8955cf5433fa0e79d3ad3a48c590fb \
-                            sha256  c8a85b28d377cc7737e46e2d9f2b4f44ee3c0e1deac6bf46ddefc7187d30797a \
-                            size    167226
-        python.pep517       no
-
-        depends_build-append \
-                            port:py${python.version}-setuptools_scm
-
-        depends_lib-append  port:py${python.version}-importlib-metadata \
-                            port:py${python.version}-pyrsistent \
-                            port:py${python.version}-six
-    } else {
-        patchfiles-append   patch-setup.py.diff
-
-        depends_build-append \
-                            port:py${python.version}-hatch-vcs \
-                            port:py${python.version}-hatch-fancy-pypi-readme
-
-        if {${python.version} < 38} {
-            version             4.17.3
-            checksums           rmd160  86637e335ef60176700311eb93e0d5dbbcb8d457 \
-                                sha256  0f864437ab8b6076ba6707453ef8f98a6a0d512a80e93f8abdb676f737ecb60d \
-                                size    297785
-
-            depends_lib-append  port:py${python.version}-typing_extensions \
-                                port:py${python.version}-importlib-metadata \
-                                port:py${python.version}-pyrsistent
-        } else {
-            depends_lib-append  port:py${python.version}-jsonschema-specifications \
-                                port:py${python.version}-referencing \
-                                port:py${python.version}-rpds-py
-        }
-
-        if {${python.version} < 39} {
-            depends_lib-append  port:py${python.version}-importlib-resources \
-                                port:py${python.version}-pkgutil_resolve_name
-        }
+    if {${python.version} < 39} {
+        depends_lib-append  port:py${python.version}-importlib-resources \
+                            port:py${python.version}-pkgutil_resolve_name
     }
 
     livecheck.type      none
