--- a/python/py-pymongo/Portfile
+++ b/python/py-pymongo/Portfile
@@ -4,13 +4,12 @@ PortSystem          1.0
 PortGroup           python 1.0
 
 name                py-pymongo
-version             4.4.1
+version             4.6.1
 revision            0
 categories-append   databases
 license             Apache
 
-python.versions     37 38 39 310 311
-python.pep517       yes
+python.versions     38 39 310 311 312
 
 maintainers         {stromnov @stromnov} openmaintainer
 
@@ -22,12 +21,14 @@ long_description \
 
 homepage            https://www.mongodb.org/
 
-checksums           rmd160  641bcb5e65afaf0666aec7c22437945ebd59c79b \
-                    sha256  a4df87dbbd03ac6372d24f2a8054b4dc33de497d5227b50ec649f436ad574284 \
-                    size    828735
+checksums           rmd160  12ae3753a8271c26dd887cc8163f495a87d3f9ce \
+                    sha256  31dab1f3e1d0cdd57e8df01b645f52d43cc1b653ed3afd535d2891f4fc4f9712 \
+                    size    1431081
 
 if {${name} ne ${subport}} {
     conflicts               py${python.version}-bson
+
+    depends_lib-append  port:py${python.version}-dnspython
 
     post-destroot {
         xinstall -m 755 -d ${destroot}${python.prefix}/share/doc/${subport}
