iv: non-functional: fix parsing port again
[skip ci]

--- a/devel/iv/Portfile
+++ b/devel/iv/Portfile
@@ -61,7 +61,7 @@ if {${os.platform} eq "darwin" && ${os.major} > 21} {
 if {${configure.build_arch} in [list arm i386 ppc]} {
     configure.args-append \
                     -DM32=ON
-    if {[string match *gcc* ${configure.compiler}]
+    if {[string match *gcc* ${configure.compiler}]} {
         configure.ldflags-append \
                     -latomic
     }
