R-oeli: update to 0.4.0

--- a/R/R-oeli/Portfile
+++ b/R/R-oeli/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 PortGroup           R 1.0
 
-R.setup             cran loelschlaeger oeli 0.3.2
+R.setup             cran loelschlaeger oeli 0.4.0
 revision            0
 categories-append   devel
 maintainers         {@barracuda156 gmail.com:vital.had} openmaintainer
@@ -11,11 +11,12 @@ license             GPL-3+
 description         Utilities for developing data science software
 long_description    {*}${description}
 homepage            https://github.com/loelschlaeger/oeli
-checksums           rmd160  37031f1276ef9e13d35fadc4982516403c841d92 \
-                    sha256  00e9bf417c8fcc425be236ba2900b6229a7f03fc9b537837b7ad1b268de63212 \
-                    size    72913
+checksums           rmd160  0f38902b11b7496f0c80839aa4bb38290869cf6e \
+                    sha256  e11c3e6d180767fac777cfb3645cea1bc8d384c9532c977ee104e3a91d4003ea \
+                    size    75526
 
-depends_lib-append  port:R-checkmate \
+depends_lib-append  port:R-benchmarkme \
+                    port:R-checkmate \
                     port:R-cli \
                     port:R-ggplot2 \
                     port:R-hexSticker \
