--- a/devel/rust-analyzer/Portfile
+++ b/devel/rust-analyzer/Portfile
@@ -4,7 +4,7 @@ PortSystem          1.0
 PortGroup           cargo   1.0
 PortGroup           github  1.0
 
-github.setup        rust-analyzer rust-analyzer 2024-01-29
+github.setup        rust-analyzer rust-analyzer 2024-02-05
 github.tarball_from archive
 version             [string map { {-} {} } ${github.version}]
 revision            0
@@ -25,9 +25,9 @@ maintainers         @fabius \
                     openmaintainer
 
 checksums           ${distname}${extract.suffix} \
-                        rmd160  72bea0a072073709f6cd7426f708dbbf1ef3993b \
-                        sha256  0a086d2b2f0e0ac2ec9b5c99cdb19cfa11c3abec641ca6347b0482f292435c71 \
-                        size    2756571
+                        rmd160  5a5e5a419ca4a9420b0350d2a509dd5d47d6622b \
+                        sha256  3ce30cbd657fbf34697cf53a7d2775fc41c40a9d4e48cf716fa8bec7fdc41ded \
+                        size    2763845
 
 destroot {
     xinstall -m 0755 \
@@ -39,7 +39,7 @@ destroot {
 cargo.crates \
     addr2line                       0.19.0  a76fd60b23679b7d19bd066031410fb7e458ccc5e958eb5c325888ce4baedc97 \
     adler                            1.0.2  f26201604c87b1e01bd3d98f8d5d9a8fcbb815e8cedb41ffccbeb4bf593a35fe \
-    always-assert                    0.1.3  4436e0292ab1bb631b42973c61205e704475fe8126af845c8d923c0996328127 \
+    always-assert                    0.2.0  a1078fa1ce1e34b1872d8611ad921196d76bdd7027e949fbe31231abde201892 \
     anyhow                          1.0.75  a4668cab20f66d8d020e1fbc0ebe47217433c1b6c8f2040faf858554e394ace6 \
     arbitrary                        1.3.2  7d5a26814d8dcb93b0e5a0ff3c6d80a8843bafb21b39e8e18a6f05471870e110 \
     arrayvec                         0.7.4  96d30a06541fbafbc7f82ed10c06164cfbd2c401138f6addd8404629c4b16711 \
@@ -138,25 +138,27 @@ cargo.crates \
     pulldown-cmark                   0.9.3  77a1a2f1f0a7ecff9c31abbe177637be0e97a0aef46cf8738ece09327985d998 \
     pulldown-cmark-to-cmark         10.0.4  0194e6e1966c23cc5fd988714f85b18d548d773e81965413555d96569931833d \
     quote                           1.0.28  1b9ab9c7eadfd8df19006f1cf1a4aed13540ed5cbc047010ece5826e10825488 \
-    ra-ap-rustc_abi                 0.33.0  8ce9100fc66c6c60aeeb076868ead9c2eaa65d6a5a90404f08c242327a92ff4b \
+    ra-ap-rustc_abi                 0.35.0  3c0baa423a2c2bfd6e4bd40e7215f7ddebd12a649ce0b65078a38b91068895aa \
     ra-ap-rustc_index               0.33.0  5e5313d7f243b63ef9e58d94355b11aa8499f1328055f1f58adf0a5ea7d2faca \
+    ra-ap-rustc_index               0.35.0  322b751895cc4a0a2ee0c6ab36ec80bc8abf5f8d76254c482f96f03c27c92ebe \
     ra-ap-rustc_index_macros        0.33.0  a83108ebf3e73dde205b9c25706209bcd7736480820f90ded28eabaf8b469f25 \
-    ra-ap-rustc_lexer               0.33.0  d2d221356e5717595e8a0afa5fba1620dcb4032ab784dc4d98fdc7284e3feb66 \
-    ra-ap-rustc_parse_format        0.33.0  ab62fc925612374103b4f178da347b535b35d9eb1ff5ba42105c990b2e25a164 \
+    ra-ap-rustc_index_macros        0.35.0  054e25eac52f0506c1309ca4317c11ad4925d7b99eb897f71aa7c3cbafb46c2b \
+    ra-ap-rustc_lexer               0.35.0  c8da0fa51a1a97ba4296a1c78fa454815a153b472e2546b6338a0902ad59e015 \
+    ra-ap-rustc_parse_format        0.35.0  3851f930a54adcb76889983dcd5c00a0c4e206e190e1384dbc00d49b82dfb45e \
     ra-ap-rustc_pattern_analysis    0.33.0  6c4085e0c771fd4b883930b599ef42966b855762bbe4052c17673b3253421a6d \
     rayon                            1.8.0  9c27db03db7734835b3f53954b534c91069375ce6ccaa2e065441e07d9b6cdb1 \
     rayon-core                      1.12.0  5ce3fb6ad83f861aac485e76e1985cd109d9a3713802152be56c3b1f0e0658ed \
     redox_syscall                    0.3.5  567664f262709473930a4bf9e51bf2ebf3348f2e748ccc50dea20646858f8f29 \
     redox_syscall                    0.4.1  4722d768eff46b75989dd134e5c353f0d6296e5aaa3132e776cbdb56be7731aa \
     rowan                          0.15.15  32a58fa8a7ccff2aec4f39cc45bf5f985cec7125ab271cf681c279fd00192b49 \
-    rust-analyzer-salsa       0.17.0-pre.5  ca9d387a9801f4fb9b366789ad1bfc08448cafc49cf148d907cfcd88ab665d7f \
-    rust-analyzer-salsa-macros 0.17.0-pre.5 a2035f385d7fae31e9b086f40b272ee1d79c484472f31c9a10348a406e841eaf \
+    rust-analyzer-salsa       0.17.0-pre.6  719825638c59fd26a55412a24561c7c5bcf54364c88b9a7a04ba08a6eafaba8d \
+    rust-analyzer-salsa-macros 0.17.0-pre.6 4d96498e9684848c6676c399032ebc37c52da95ecbefa83d71ccc53b9f8a4a8e \
     rustc-demangle                  0.1.23  d626bb9dae77e28219937af045c257c28bfd3f69333c512553507f5f9798cb76 \
     rustc-hash                       1.1.0  08d43f7aa6b08d49f382cde6a7982047c3426db949b1424bc4b7ec9ae12c6ce2 \
     rustc_apfloat  0.2.0+llvm-462a31f5a5ab  465187772033a5ee566f69fe008df03628fce549a0899aae76f0a0c2e34696be \
     ryu                             1.0.13  f91339c0467de62360649f8d3e185ca8de4224ff281f66000de5eb2a77a79041 \
     same-file                        1.0.6  93fc1dc3aaa9bfed95e02e6eadabb4baf7e3078b0bd1b4d7b6b0b68378900502 \
-    scip                             0.3.1  3e84d21062a3ba08d58870c8c36b0c005b2b2261c6ad1bf7042585427c781883 \
+    scip                             0.3.3  e5dc1bd66649133af84ab62436ddd2856c2605182b02dec2cd197f684dfe15ef \
     scoped-tls                       1.0.1  e1cf6437eb19a8f4a6cc0f7dca544973b0b78843adbfeb3683d1a94a0024a294 \
     scopeguard                       1.1.0  d29ab0c6d3fc0ee92fe66e2d99f700eab17a8d57d1c1d3b748380fb20baa78cd \
     semver                          1.0.17  bebd363326d05ec3e2f532ab7660680f3b02130d780c299bca73469d521bc0ed \
