msort: fix the build

--- a/textproc/msort/Portfile
+++ b/textproc/msort/Portfile
@@ -20,7 +20,8 @@ checksums           rmd160  5d806026f4020f8c66acbb2e2a5d9ed280141e35 \
 depends_lib		port:tre port:gettext port:libuninum port:libutf8proc
 depends_run		port:tcl port:tk port:iwidgets
 
-patchfiles		patch-CFLAGS.diff
+patchfiles		patch-CFLAGS.diff \
+                patch-fix-includes.diff
 
 configure.args	--mandir=${prefix}/share/man
 configure.ldflags-append	"-lintl"
