hdf5: Remove old sed flag.
Make work with older sed. Not bumping (completed builds won't change result).

Once more hopefully fixes: https://trac.macports.org/ticket/69254

--- a/science/hdf5/Portfile
+++ b/science/hdf5/Portfile
@@ -117,7 +117,7 @@ post-destroot {
     # Depending on build config, a number of different files need to be patched
     # just let the system find which ones need it for this build.
     system -W ${destroot}${prefix}/bin \
-        "grep -Il --null -- '-lsz -lz' * | xargs -0 sed -I '' \
+        "grep -Il --null -- '-lsz -lz' * | xargs -0 sed -i '' \
           -e 's^-lsz^${prefix}/lib/libaec/lib/libsz.dylib^' \
           -e 's^-lz^${prefix}/lib/libz.dylib^'"
 }
