[zig] Fix duplicate __mh_execute_header issue on macOS Sonoma
This commit adds `-DCMAKE_INSTALL_RPATH` and `-DCMAKE_EXE_LINKER_FLAGS` to the Zig Portfile to address a duplicate symbol issue with `__mh_execute_header` encountered on macOS Sonoma with zig 0.11.0. The change ensures proper dynamic linking and resolves build failures.

--- a/lang/zig/Portfile
+++ b/lang/zig/Portfile
@@ -43,3 +43,4 @@ compiler.whitelist  macports-clang-${llvm_version}
 cmake.module_path   ${prefix}/libexec/llvm-${llvm_version} \
                     ${prefix}
 cmake_share_module_dir ${prefix}/libexec/llvm-${llvm_version}
+configure.args-append -DCMAKE_INSTALL_RPATH="${prefix}/libexec/llvm-16/lib" -DCMAKE_EXE_LINKER_FLAGS="-ld_classic"
