octave-control: use new octave PG API

--- a/octave/octave-control/Portfile
+++ b/octave/octave-control/Portfile
@@ -2,23 +2,19 @@
 
 PortSystem          1.0
 PortGroup           compilers 1.0
-PortGroup           github 1.0
 PortGroup           octave 1.0
 
-set pkg_name        control
-version             4.0.0
+octave.setup        github gnu-octave pkg-control 4.0.0
+octave.module       control
 revision            0
-github.setup        gnu-octave pkg-${pkg_name} ${version} ${pkg_name}-
-octave.setup        ${pkg_name} ${version}
-license             GPL-3+
+license             GPL-3+ BSD
 maintainers         {mps @Schamschula} openmaintainer
 description         Computer-Aided Control System Design (CACSD) \
                     Tools for GNU Octave, based on the SLICOT Library.
 long_description    {*}${description}
-homepage            https://github.com/gnu-octave/pkg-control
 
 github.tarball_from releases
-distname            ${pkg_name}-${version}
+distname            control-${version}
 
 checksums           rmd160  1fa393683943e2a881b8f9f4be235b01fd01833d \
                     sha256  3eb214c739f30b2c71cc72c63ec62bdd99fb55fd0cd46a74eba2ebb7ac1e967a \
@@ -26,3 +22,5 @@ checksums           rmd160  1fa393683943e2a881b8f9f4be235b01fd01833d \
 
 compilers.choose    fc f77 f90
 compilers.setup     require_fortran
+
+github.livecheck.regex  control-(\[0-9.\]+)
