--- a/octave/octave-statistics/Portfile
+++ b/octave/octave-statistics/Portfile
@@ -1,22 +1,15 @@
 # -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 
 PortSystem          1.0
-PortGroup           github 1.0
 PortGroup           octave 1.0
 
-version             1.6.1
-github.setup        gnu-octave statistics ${version} release-
-octave.setup        statistics ${version}
+octave.setup        github gnu-octave statistics 1.6.2 release-
 revision            0
-platforms           darwin
 license             GPL-3+ public-domain
 maintainers         {mps @Schamschula} openmaintainer
 description         Additional statistics functions for Octave.
 long_description    {*}${description}
-homepage            https://github.com/gnu-octave/statistics/
 
-checksums           rmd160  8a0965b0602ac673ff4df3eb6cf329914dbac086 \
-                    sha256  ce733000e8faae5d872bd406abbb878da2e7fd15a8e46d263155686f6a09330f \
-                    size    7925948
-
-depends_lib-append  port:octave-io
+checksums           rmd160  76a034a2c73574409468a51629e7436625fd2c09 \
+                    sha256  2de5b6c4a8ae27318831bdd114ef68b2267a04433709b0ffda0afd2bf0d3b415 \
+                    size    8042276
