octave-doc: use new octave PG API

--- a/octave/octave-doc/Portfile
+++ b/octave/octave-doc/Portfile
@@ -1,15 +1,12 @@
 # -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 
 PortSystem          1.0
-PortGroup           github 1.0
 PortGroup           octave 1.0
 
-set pkg_name        doc
-version             0.5.3
-revision            0
-github.setup        gnu-octave pkg-octave-${pkg_name} ${version} release-
-octave.setup        ${pkg_name} ${version}
-license             GPL-3
+octave.setup        github gnu-octave pkg-octave-doc 0.5.3 release-
+octave.module       doc
+revision            1
+license             GPL-3+
 maintainers         {mps @Schamschula} openmaintainer
 description         Create a function reference from Octave help texts (docstrings) \
                     from single functions or all functions in a package, which can be \
@@ -18,14 +15,16 @@ long_description    {*}${description} The generated pages follow the template of
                     Octave Packages at GitHub Pages based on bootstrap 5 and they have \
                     similar layout to the older documentation reference pages at Source \
                     Forge.
-homepage            https://github.com/gnu-octave/pkg-octave-doc/
 
 supported_archs     noarch
 platforms           {darwin any}
 
-checksums           rmd160  d35f8a77ded51a1e94d6f3b99668cb89a3810ec7 \
-                    sha256  28d13225548ea92c776b7fdfe1d2e937446fc82241ed1f990701ccbce2d8e515 \
-                    size    156289
+# Remove when updating to the next version
+dist_subdir         ${name}/${version}_${revision}
+
+checksums           rmd160  465b619f80320fd185a176ffb0bc2205b430af7d \
+                    sha256  b08cd7f172d4209ccc4618c254e7106caa33733167b0788d8e3169b21ffc3a03 \
+                    size    156286
 
 depends_lib         port:git \
                     port:texi2html
