R-ichimoku: update to 1.5.0

--- a/R/R-ichimoku/Portfile
+++ b/R/R-ichimoku/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 PortGroup           R 1.0
 
-R.setup             cran shikokuchuo ichimoku 1.4.13
+R.setup             cran shikokuchuo ichimoku 1.5.0
 revision            0
 categories-append   finance
 maintainers         nomaintainer
@@ -11,14 +11,15 @@ license             GPL-3+
 description         Visualization and tools for Ichimoku Kinko Hyo strategies
 long_description    {*}${description}
 homepage            https://shikokuchuo.net/ichimoku
-checksums           rmd160  7f93215553ec43b87ccd7828ea88f0b34fef32e1 \
-                    sha256  eeeef64489cb846705eea72229657e155c49df8bb38c636dbfdff402bcbd69ca \
-                    size    806956
+checksums           rmd160  fc11eaead121f5d7471612c425f89723acf670ea \
+                    sha256  c6084e13fcb474e51c7cadaebdd97a6210d77934b97979bd8e599f2d6315fc0c \
+                    size    807184
 
 depends_lib-append  port:R-ggplot2 \
                     port:R-mirai \
                     port:R-nanonext \
                     port:R-RcppSimdJson \
+                    port:R-secretbase \
                     port:R-shiny \
                     port:R-xts \
                     port:R-zoo
