--- a/www/FileZilla/Portfile
+++ b/www/FileZilla/Portfile
@@ -9,7 +9,7 @@ version             3.66.4
 
 categories          www aqua
 platforms           darwin
-maintainers         {@lhaeger gmx.net:lothar.haeger} openmaintainer
+maintainers         openmaintainer
 license             GPL-2+
 
 description         Open-source FTP, FTPS, and SFTP client
