--- a/devel/libfilezilla/Portfile
+++ b/devel/libfilezilla/Portfile
@@ -11,7 +11,7 @@ version             0.45.0
 revision            0
 
 categories          devel
-maintainers         {@lhaeger gmx.net:lothar.haeger} openmaintainer
+maintainers         openmaintainer
 license             GPL-2+
 
 description         Shared component for Filezilla programs
