iwnet: update to 2024.02.06, drop a temporary patch

--- a/net/iwnet/Portfile
+++ b/net/iwnet/Portfile
@@ -8,8 +8,8 @@ PortGroup           legacysupport 1.1
 # strndup, clock_gettime
 legacysupport.newest_darwin_requires_legacy 15
 
-github.setup        Softmotions iwnet 81b6ad3d69ff3654bdad04478666edbf4d3f5d3f
-version             2024.01.27
+github.setup        Softmotions iwnet aae1b8b52b1ac37d0d521939ebac17b5bdfbb060
+version             2024.02.06
 revision            0
 categories          net devel
 license             MIT
@@ -19,18 +19,10 @@ long_description    {*}${description} providing websockets client/server, SSL, \
                     reverse proxy and routing.
 # Due to: https://github.com/Softmotions/iwnet/issues/5
 platforms           {darwin > 9}
-checksums           rmd160  c4c0ce4688fad27a03135c597eb42f5a9d7068d7 \
-                    sha256  418bf8c2de707559fd21ddb6474c989377de9793eed3bb993bd66b429ad0c94d \
-                    size    824035
+checksums           rmd160  25ee3b969ad2b6dc09abbd31e323145f356cab58 \
+                    sha256  2f432ad82b0ce770e40fbe34917a1b9d22478067cc64e2b33eabb536d53f9955 \
+                    size    824248
 github.tarball_from archive
-
-# Temporary fix reverting a breaking commit:
-# https://github.com/Softmotions/iwnet/commit/414ce1adc6484c6518ac8587107ff2905328f8de
-# FIXME: add an implementation for pthread_barrier. See also:
-# https://github.com/ademakov/DarwinPthreadBarrier
-# https://github.com/envy/knx2influx/issues/20
-# https://github.com/pmwkaa/ioarena/issues/10
-patchfiles-append   0001-Revert-iwn_poller_poll_in_thread-now-waits-poller-th.patch
 
 depends_lib-append  port:iowow
 
@@ -41,7 +33,7 @@ configure.args-append \
                     -DBUILD_TESTS:BOOL=ON
 
 # https://github.com/Softmotions/iwnet/issues/6
-if {[string match *gcc* ${configure.compiler}]} {
+if {[string match *gcc* ${configure.compiler}] && ${configure.build_arch} in [list arm i386 ppc]} {
     configure.ldflags-append \
                     -latomic
 }
