nb: fix zsh completion path

--- a/office/nb/Portfile
+++ b/office/nb/Portfile
@@ -5,7 +5,7 @@ PortGroup           github 1.0
 
 github.setup        xwmx nb 7.10.3
 github.tarball_from archive
-revision            0
+revision            1
 
 homepage            https://xwmx.github.io/nb/
 
@@ -65,5 +65,5 @@ destroot {
 
     xinstall -d ${destroot}${prefix}/share/zsh/site-functions
     copy ${worksrcpath}/etc/${name}-completion.zsh \
-        ${destroot}${prefix}/share/fish/vendor_completions.d/_${name}
+        ${destroot}${prefix}/share/zsh/site-functions/_${name}
 }
