--- a/textproc/dyff/Portfile
+++ b/textproc/dyff/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 PortGroup           golang 1.0
 
-go.setup            github.com/homeport/dyff 1.6.0 v
+go.setup            github.com/homeport/dyff 1.7.0 v
 go.offline_build    no
 github.tarball_from archive
 revision            0
@@ -17,14 +17,36 @@ license             MIT
 maintainers         {gmail.com:herby.gillot @herbygillot} \
                     openmaintainer
 
-checksums           rmd160  f699ff5697f45fcfe4b37336628a0519bc951464 \
-                    sha256  5676021d9d42508b5b3612d63d13f1089b9be019d8d148a281b04c34da0922d0 \
-                    size    1206925
+checksums           rmd160  90b5254dcb7362d7f62a85dd0611ea8d0feb06f0 \
+                    sha256  72be2b7d82c9e2f6a063d60e335f3a255654bed8e94e601c3e542af1571d1516 \
+                    size    1209022
 
 build.pre_args-append \
     -ldflags \"-X ${go.package}/internal/cmd.version=${version}\"
 build.args          ./cmd/${name}
 
+post-build {
+    # Generate completion files
+    file mkdir ${worksrcpath}/completion
+
+    foreach _shell {bash fish zsh} {
+        system -W ${worksrcpath} \
+            "./${name} completion ${_shell} > ./completion/${name}.${_shell}"
+    }
+}
+
 destroot {
     xinstall -m 0755 ${worksrcpath}/${name} ${destroot}${prefix}/bin/
+
+    xinstall -d ${destroot}${prefix}/share/bash-completion/completions
+    copy ${worksrcpath}/completion/${name}.bash \
+        ${destroot}${prefix}/share/bash-completion/completions/${name}
+
+    xinstall -d ${destroot}${prefix}/share/fish/vendor_completions.d
+    copy ${worksrcpath}/completion/${name}.fish \
+        ${destroot}${prefix}/share/fish/vendor_completions.d/
+
+    xinstall -d ${destroot}${prefix}/share/zsh/site-functions
+    copy ${worksrcpath}/completion/${name}.zsh \
+        ${destroot}${prefix}/share/zsh/site-functions/_${name}
 }
