ytt: update to 0.48.0

--- a/textproc/ytt/Portfile
+++ b/textproc/ytt/Portfile
@@ -3,12 +3,12 @@
 PortSystem          1.0
 PortGroup           golang 1.0
 
-go.setup            github.com/carvel-dev/ytt 0.47.0 v
-go.package          github.com/vmware-tanzu/carvel-ytt
+go.setup            github.com/carvel-dev/ytt 0.48.0 v
+go.package          carvel.dev/ytt
 github.tarball_from archive
 revision            0
 
-homepage            https://carvel.dev/ytt
+homepage            https://${go.package}
 
 description         \
     YAML templating tool that works on YAML structure instead of text
@@ -54,9 +54,9 @@ destroot {
 }
 
 checksums           ${distname}${extract.suffix} \
-                        rmd160  65cd3ff966cf555846c3dcda4be115a5b88dd7d2 \
-                        sha256  71641bdc5086c97c9d8c098f5f42fc29e725b33a89488fbefcaa2dad4664dad7 \
-                        size    1350130
+                        rmd160  224ad3b6e7456214f5845cdccdc18ed4f63b9f47 \
+                        sha256  3ad1c61f11c0d16b6668d90aa416559f29f03433cb5053f7aefa64fa445f5054 \
+                        size    1349866
 
 go.vendors          gopkg.in/yaml.v3 \
                         lock    v3.0.1 \
