octave-fileio: use new octave PG API

--- a/octave/octave-fileio/Portfile
+++ b/octave/octave-fileio/Portfile
@@ -1,20 +1,15 @@
 # -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 
 PortSystem          1.0
-PortGroup           github 1.0
 PortGroup           octave 1.0
 
-set pkg_name        fileio
-version             1.2.2
-revision            0
-github.setup        reprostat fileio ${version}
-octave.setup        ${pkg_name} ${version}
+octave.setup        github reprostat fileio 1.2.2
+revision            1
 license             MIT
 maintainers         {mps @Schamschula} openmaintainer
 description         I/O function for files holding structured data, such as JSON and \
                     XML files.
 long_description    {*}${description}
-homepage            https://github.com/reprostat/fileio
 
 supported_archs     noarch
 platforms           {darwin any}
